--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
     shimmer: ^2.0.0
     lottie: ^1.2.1
     image_picker: ^0.8.4+10
+    fluttertoast:
 
 dev_dependencies:
     flutter_test:
@@ -32,4 +33,5 @@ flutter:
 
     assets:
         - assets/lottie/
+        - assets/img/
         - assets/illustration/
